src/test/ui/issues/issue-37323.stderr
error[E0491]: in type `&'a NestedB<'b>`, reference has a longer lifetime than the data it references
  --> $DIR/issue-37323.rs:19:5
   |
LL |     x: &'a NestedB<'b>
   |     ^^^^^^^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the struct at 18:16
  --> $DIR/issue-37323.rs:18:16
   |
LL | struct NestedA<'a, 'b> {
   |                ^^
note: but the referenced data is only valid for the lifetime 'b as defined on the struct at 18:20
  --> $DIR/issue-37323.rs:18:20
   |
LL | struct NestedA<'a, 'b> {
   |                    ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
